--- a/HEADER/src/App.less
+++ b/HEADER/src/App.less
@@ -13,15 +13,15 @@
         height: 50px;
         float: left;
         margin: 0;
-        padding: 0 16px;
         font-size: 14px;
+        position: relative;
         // transition: width 2s;
         cursor: pointer;
 
         &:hover {
             background: yellow;
             text-align: left;
-            padding-left: 16px;
+            // padding-left: 16px;
         }
 
         &:hover .common-navs-collected {
@@ -33,17 +33,32 @@
             margin: 0 auto;
             vertical-align: middle;
             line-height: 50px;
+            margin: 0 16px;
             height: 14px;
         }
 
         .common-navs-collected {
             // position: absolute;
-            display: none;
+            // display: none;
 
             li {
+                &:hover {
+                    color: lime;
+                    background: red;
+                    cursor: pointer;
+                }
+
                 display: inline-block;
                 font-size: 16px;
                 padding: 0 40px;
+            }
+        }
+
+        .common-menu-nav {
+            background: yellow;
+
+            li {
+                display: inline-block;
             }
         }
     }
