--- a/HEADER/src/App.less
+++ b/HEADER/src/App.less
@@ -46,7 +46,9 @@
                 font-size: 12px;
                 height: 50px;
                 line-height: 50px;
-                padding: 0 40px;
+                // padding: 0 40px;
+                margin: 0 25px;
+                padding: 0 15px;
                 display: inline-block;
                 vertical-align: middle;
                 box-sizing: border-box;
@@ -58,7 +60,6 @@
                     // background-color: #ebebeb;
                     color: #ff6a00;
                     // font-weight: 600;
-                    cursor: pointer;
                     border-bottom: 2px solid #ff6a00;
                 }
 
@@ -68,20 +69,20 @@
 
         .common-menu-nav {
             line-height: normal;
+            padding: 5px 0 0 25px;
 
             li {
                 display: inline-block;
-                padding: 0 25px;
+                // padding: 0 0 0 25px;
                 font-size: 12px;
-                height: 30px;
-                line-height: 30px;
+                height: 28px;
+                line-height: 28px;
                 cursor: pointer;
-                width: 170px;
+                width: 130px;
                 text-align: center;
 
-                &:hover {
-                    color: red;
-                    background-color: #ebebeb;
+                &:hover a {
+                    color: #ff6a00;
                 }
 
                 a {
@@ -92,7 +93,7 @@
 
         .common-nav-item {
             font-size: 12px;
-            padding-bottom: 10px;
+            padding: 0 0 10px 0;
 
             h5 {
                 color: #555555;
@@ -101,11 +102,8 @@
                 padding-left: 20px;
                 height: 35px;
                 line-height: 35px;
+                margin-bottom: 5px;
                 border-bottom: 1px solid #e5e5e5;
-            }
-
-            ul {
-                padding: 0;
             }
         }
     }
