--- a/HEADER/src/App.less
+++ b/HEADER/src/App.less
@@ -99,7 +99,8 @@
                 color: #555555;
                 font-size: 12px;
                 font-weight: 600;
-                padding-left: 20px;
+                margin-left: 20px;
+                display: inline-block;
                 height: 35px;
                 line-height: 35px;
                 margin-bottom: 5px;
