--- a/HEADER/src/App.less
+++ b/HEADER/src/App.less
@@ -91,15 +91,29 @@
             }
         }
 
+        .common-nav-item-null {
+            padding: 0 !important;
+            color: #555555;
+
+            a {
+                color: #555555;
+
+                &:hover {
+                    color: #ff6a00;
+                }
+            }
+        }
+
         .common-nav-item {
             font-size: 12px;
             padding: 0 0 10px 0;
+            line-height: normal;
 
             h5 {
                 color: #555555;
                 font-size: 12px;
                 font-weight: 600;
-                margin-left: 20px;
+                margin-left: 25px;
                 display: inline-block;
                 height: 35px;
                 line-height: 35px;
