--- a/HEADER/src/App.less
+++ b/HEADER/src/App.less
@@ -33,6 +33,7 @@
         left: calc(325px);
         background: #f7f7f7;
         width: 750px;
+        padding-bottom: 15px;
 
         .common-navs-collected {
             // position: absolute;
@@ -106,7 +107,7 @@
 
         .common-nav-item {
             font-size: 12px;
-            padding: 0 0 10px 0;
+            // padding: 0 0 10px 0;
             line-height: normal;
 
             h5 {
