--- a/HEADER/src/App.less
+++ b/HEADER/src/App.less
@@ -10,21 +10,20 @@
 
     .common-all-nav {
         // width: 50px;
-        height: 50px;
+        // height: 50px;
         float: left;
         margin: 0;
         font-size: 14px;
         position: relative;
-        // transition: width 2s;
-        cursor: pointer;
 
+        // transition: width 2s;
         img {
-            width: 18px;
+            width: 16px;
+            height: 14px;
             margin: 0 auto;
             vertical-align: middle;
             line-height: 50px;
             margin: 0 16px;
-            height: 14px;
         }
     }
 
@@ -33,7 +32,6 @@
         left: calc(325px);
         background: #f7f7f7;
         width: 750px;
-        padding-bottom: 15px;
 
         .common-navs-collected {
             // position: absolute;
@@ -41,8 +39,10 @@
             height: 50px;
             line-height: normal;
             background: white;
+            position: relative;
+            border-bottom: 1px solid #e9e9e9;
 
-            li {
+            >li {
                 color: rgba(0, 0, 0, 0.85);
                 font-size: 12px;
                 height: 50px;
@@ -64,64 +64,82 @@
                     border-bottom: 2px solid #ff6a00;
                 }
 
-
-            }
-        }
-
-        .common-menu-nav {
-            line-height: normal;
-            padding: 5px 0 0 25px;
-
-            li {
-                display: inline-block;
-                // padding: 0 0 0 25px;
-                font-size: 12px;
-                height: 28px;
-                line-height: 28px;
-                cursor: pointer;
-                width: 130px;
-                text-align: center;
-
-                &:hover a {
-                    color: #ff6a00;
+                &:hover .common-nav-wrap {
+                    display: block;
                 }
 
-                a {
-                    color: #555555;
+
+                .common-nav-wrap {
+                    top: 50px;
+                    left: 0;
+                    position: absolute;
+                    display: none;
+                    width: 750px;
+                    background-color: #f7f7f7;
+                    padding-bottom: 15px;
+
+                    .common-menu-nav {
+                        line-height: normal;
+                        padding: 5px 0 0 25px;
+
+                        li {
+                            display: inline-block;
+                            padding: 0 0 0 25px;
+                            font-size: 12px;
+                            height: 28px;
+                            line-height: 28px;
+                            cursor: pointer;
+                            width: 130px;
+                            text-align: center;
+
+                            &:hover a {
+                                color: #ff6a00;
+                            }
+
+                            a {
+                                color: #555555;
+                            }
+                        }
+                    }
+
+                    .common-nav-item-null {
+                        padding: 0 !important;
+                        color: #555555;
+
+                        a {
+                            color: #555555;
+
+                            &:hover {
+                                color: #ff6a00;
+                            }
+                        }
+                    }
+
+                    .common-nav-item {
+                        font-size: 12px;
+                        // padding: 0 0 10px 0;
+                        line-height: normal;
+
+                        h5 {
+                            color: #555555;
+                            font-size: 12px;
+                            font-weight: 600;
+                            margin-left: 25px;
+                            display: inline-block;
+                            height: 35px;
+                            line-height: 35px;
+                            margin-bottom: 5px;
+                            border-bottom: 1px solid #e5e5e5;
+                        }
+                    }
+
                 }
             }
+
         }
 
-        .common-nav-item-null {
-            padding: 0 !important;
-            color: #555555;
 
-            a {
-                color: #555555;
 
-                &:hover {
-                    color: #ff6a00;
-                }
-            }
-        }
-
-        .common-nav-item {
-            font-size: 12px;
-            // padding: 0 0 10px 0;
-            line-height: normal;
-
-            h5 {
-                color: #555555;
-                font-size: 12px;
-                font-weight: 600;
-                margin-left: 25px;
-                display: inline-block;
-                height: 35px;
-                line-height: 35px;
-                margin-bottom: 5px;
-                border-bottom: 1px solid #e5e5e5;
-            }
-        }
     }
 
     .common-topbar-logo {
@@ -163,6 +181,8 @@
 
             img {
                 vertical-align: middle;
+                width: 20px;
+                height: 20px;
             }
         }
 
