--- a/HEADER/src/App.less
+++ b/HEADER/src/App.less
@@ -43,7 +43,7 @@
             border-bottom: 1px solid #e9e9e9;
 
             >li {
-                color: rgba(0, 0, 0, 0.85);
+                color: rgba(0, 0, 0, 0.65);
                 font-size: 12px;
                 height: 50px;
                 line-height: 50px;
@@ -197,6 +197,12 @@
             cursor: pointer;
             position: relative;
 
+            .sound-icon {
+                width: 20px;
+                height: 20px;
+                vertical-align: middle;
+            }
+
             .common-topbar-dot {
                 font-size: 12px;
                 color: #fff;
@@ -205,8 +211,8 @@
                 height: 4px;
                 border-radius: 2px;
                 position: absolute;
-                top: 13px;
-                right: 10px;
+                top: 16px;
+                right: 16px;
                 z-index: 9;
                 white-space: nowrap;
             }
@@ -320,6 +326,8 @@
             //     color: #555;
             // }
             img {
+                width: 20px;
+                height: 20px;
                 vertical-align: middle;
             }
         }
