--- a/HEADER/src/App.less
+++ b/HEADER/src/App.less
@@ -7,140 +7,159 @@
     position: fixed;
     width: 100%;
     height: 50px;
+    position: relative;
 
     .common-all-nav {
-        // width: 50px;
-        // height: 50px;
+        width: 50px;
+        height: 50px;
         float: left;
         margin: 0;
         font-size: 14px;
-        position: relative;
 
         // transition: width 2s;
-        img {
+        >i {
+            display: inline-block;
+            background: url('./assets/menu.png') no-repeat center / cover;
+            // background-size: ;    no-repeat fixed center center
             width: 16px;
             height: 14px;
             margin: 0 auto;
             vertical-align: middle;
             line-height: 50px;
             margin: 0 16px;
+            transition:.1s ease;
         }
-    }
 
-    .common-all-menu {
-        position: absolute;
-        left: calc(325px);
-        background: #f7f7f7;
-        width: 750px;
+        .common-all-menu {
+            position: absolute;
+            left: calc(325px);
+            background: #f7f7f7;
+            top: 0;
+            opacity: 0;
+            transition:.3s ease;
 
-        .common-navs-collected {
-            // position: absolute;
             // display: none;
-            height: 50px;
-            line-height: normal;
-            background: white;
-            position: relative;
-            border-bottom: 1px solid #e9e9e9;
+            // width: 750px;
 
-            >li {
-                color: rgba(0, 0, 0, 0.65);
-                font-size: 12px;
+            .common-navs-collected {
+                // position: absolute;
+                // display: none;
                 height: 50px;
-                line-height: 50px;
-                // padding: 0 40px;
-                margin: 0 25px;
-                padding: 0 15px;
-                display: inline-block;
-                vertical-align: middle;
-                box-sizing: border-box;
-                -moz-box-sizing: border-box;
-                -webkit-box-sizing: border-box;
+                line-height: normal;
+                background: white;
+                position: relative;
+                border-bottom: 1px solid #e9e9e9;
 
-                /* Safari */
-                &:hover {
-                    // background-color: #ebebeb;
-                    color: #ff6a00;
-                    // font-weight: 600;
-                    border-bottom: 2px solid #ff6a00;
-                }
+                >li {
+                    color: rgba(0, 0, 0, 0.65);
+                    font-size: 12px;
+                    height: 50px;
+                    line-height: 50px;
+                    // padding: 0 40px;
+                    margin: 0 25px;
+                    padding: 0 15px;
+                    display: inline-block;
+                    vertical-align: middle;
+                    box-sizing: border-box;
+                    -moz-box-sizing: border-box;
+                    -webkit-box-sizing: border-box;
 
-                &:hover .common-nav-wrap {
-                    display: block;
-                }
+                    /* Safari */
+                    &:hover {
+                        // background-color: #ebebeb;
+                        color: #ff6a00;
+                        // font-weight: 600;
+                        border-bottom: 2px solid #ff6a00;
+                    }
+
+                    &:hover .common-nav-wrap {
+                        display: block;
+                    }
 
 
-                .common-nav-wrap {
-                    top: 50px;
-                    left: 0;
-                    position: absolute;
-                    display: none;
-                    width: 750px;
-                    background-color: #f7f7f7;
-                    padding-bottom: 15px;
+                    .common-nav-wrap {
+                        top: 50px;
+                        left: 0;
+                        position: absolute;
+                        display: none;
+                        width: 750px;
+                        background-color: #f7f7f7;
+                        padding-bottom: 15px;
 
-                    .common-menu-nav {
-                        line-height: normal;
-                        padding: 5px 0 0 25px;
+                        .common-menu-nav {
+                            line-height: normal;
+                            padding: 5px 0 0 25px;
 
-                        li {
-                            display: inline-block;
-                            padding: 0 0 0 25px;
-                            font-size: 12px;
-                            height: 28px;
-                            line-height: 28px;
-                            cursor: pointer;
-                            width: 130px;
-                            text-align: center;
+                            li {
+                                display: inline-block;
+                                padding: 0 0 0 25px;
+                                font-size: 12px;
+                                height: 28px;
+                                line-height: 28px;
+                                cursor: pointer;
+                                width: 130px;
+                                text-align: center;
 
-                            &:hover a {
-                                color: #ff6a00;
+                                &:hover a {
+                                    color: #ff6a00;
+                                }
+
+                                a {
+                                    color: #555555;
+                                }
                             }
+                        }
+
+                        .common-nav-item-null {
+                            padding: 0 !important;
+                            color: #555555;
 
                             a {
                                 color: #555555;
+
+                                &:hover {
+                                    color: #ff6a00;
+                                }
                             }
                         }
-                    }
 
-                    .common-nav-item-null {
-                        padding: 0 !important;
-                        color: #555555;
-
-                        a {
-                            color: #555555;
-
-                            &:hover {
-                                color: #ff6a00;
-                            }
-                        }
-                    }
-
-                    .common-nav-item {
-                        font-size: 12px;
-                        // padding: 0 0 10px 0;
-                        line-height: normal;
-
-                        h5 {
-                            color: #555555;
+                        .common-nav-item {
                             font-size: 12px;
-                            font-weight: 600;
-                            margin-left: 25px;
-                            display: inline-block;
-                            height: 35px;
-                            line-height: 35px;
-                            margin-bottom: 5px;
-                            border-bottom: 1px solid #e5e5e5;
-                        }
-                    }
+                            // padding: 0 0 10px 0;
+                            line-height: normal;
 
+                            h5 {
+                                color: #555555;
+                                font-size: 12px;
+                                font-weight: 600;
+                                margin-left: 25px;
+                                display: inline-block;
+                                height: 35px;
+                                line-height: 35px;
+                                margin-bottom: 5px;
+                                border-bottom: 1px solid #e5e5e5;
+                            }
+                        }
+
+                    }
                 }
+
             }
 
+
+
         }
-
-
-
     }
+
+    .common-all-nav:hover>i {
+        background: url('./assets/error.png') no-repeat center / cover;
+    }
+
+    .common-all-nav:hover .common-all-menu {
+        opacity: 1;
+    }
+
+
 
     .common-topbar-logo {
         height: 50px;
