--- a/HEADER/src/index.css
+++ b/HEADER/src/index.css
@@ -44,7 +44,7 @@ html,
 body {
   width    : 100%;
   height   : 100%;
-  font-size: 100px !important;
+  /* font-size: 100px !important; */
 }
 
 /*行内块元素*/
